2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-sound.desktop.in.in: renamed Bugzilla product.

2007-04-03  Jens Granseuer  <jensgr@gmx.net>

	* sound-properties-capplet.c: (remove_device): move function inside
	USE_HAL

2007-04-03  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Matthias Clasen <mclasen@redhat.com>

	* sound-properties-capplet.c: (setup_default_mixer): ellipsize the
	device combobox (bug #425650)

2007-03-18  Christian Persch  <chpe@gnome.org>

	* sound-properties.glade: Fix button label alignment. Bug #416238.

2007-03-18  Christian Persch  <chpe@gnome.org>

	* sound-properties-capplet.c: (create_dialog): Revert unrelated change
	accidentally committed with the previous commit.

2007-03-18  Christian Persch  <chpe@gnome.org>

	* sound-properties-capplet.c: (main): Initialise
	threads early, and fix option context translation. Bug #416239.

2007-02-10  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Patrick Wade <patrick.wade@sun.com>

	* sound-properties.glade: add a11y label relations for the devices
	tab (fixes bug #369302)

2007-02-02  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Gabor Kelemen <kelemeng@gnome.hu>

	* sound-properties-capplet.c: (setup_devices): Polypaudio is now
	PulseAudio (fixes bug #394003)

2007-01-29  Kjartan Maraas  <kmaraas@gnome.org>

	* sound-properties-capplet.c: (setup_hal_devices), (setup_devices):
	ANSIfication of function declarations.

2007-01-14  Christian Persch  <chpe@svn.gnome.org>

	* sound-properties.glade: Fix label alignments bug (caused by glade-3
	bug 396433).

2007-01-14  Christian Persch  <chpe@svn.gnome.org>

	* sound-properties-capplet.c: (create_dialog): Show the sound
	properties view after adding it to the dialogue.

2007-01-11  Christian Persch  <chpe@svn.gnome.org>

	* capplets/sound/Makefile.am:
	* capplets/sound/sound-properties-capplet.c: (create_dialog),
	(dialog_response_cb), (main):
	* capplets/sound/sound-properties.glade: