@@ -1,3 +1,9 @@
+2007-05-06  Jens Granseuer  <jensgr@gmx.net>
+
+	* sound-properties-capplet.c: (create_dialog):
+	* sound-properties.glade: set button images via code instead of
+	relying on glade, so they respect the gtk-button-images xsetting
+
 2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gnome-settings-sound.desktop.in.in: renamed Bugzilla product.
